overflow-y:hidden on the footer fixes shadow issue for the widgets

--- a/assets/css/maera-materialize.css
+++ b/assets/css/maera-materialize.css
@@ -7397,3 +7397,6 @@ ul.pagination {
 
 .btn.search-submit, .search-submit.btn-large {
   width: 100%; }
+
+footer {
+  overflow-y: hidden; }
