--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -281,3 +281,7 @@ ul.pagination {
 .btn.search-submit {
     width: 100%;
 }
+
+footer {
+    overflow-y: hidden;
+}
